--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Agar.IO Clone</title>
+    <title>В Беседке Mobile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
     <div id="gameAreaWrapper">
-        <div id="status"><span class="title">Leaderboard</span></div>
+        <div id="status"><span class="title">Топ</span></div>
         <div class="chatbox" id="chatbox">
             <ul id="chatList" class="chat-list"></ul>
             <input id="chatInput" type="text" class="chat-input" placeholder="Chat here..." />
@@ -17,29 +17,29 @@
     </div>
     <div id="startMenuWrapper">
         <div id="startMenu">
-            <p>Open Agar</p>
+            <p>В Беседке Mobile</p>
             <input type="text" tabindex="0" autofocus placeholder="Enter your name here" id="playerNameInput" />
             <b class="input-error">Nick must be alphanumeric characters only!</b>
             <br />
-            <button id="startButton">Play</button>
-            <button id="settingsButton">Settings</button>
+            <button id="startButton">Играть</button>
+            <button id="settingsButton">Настройки</button>
             <br />
             <div id="settings">
                 <h3>Settings</h3>
                 <ul>
-                    <label><input id="visBord" type="checkbox">Show borders</label>
-                    <label><input id="showMass" type="checkbox">Show mass</label>
+                    <label><input id="visBord" type="checkbox">Показывать края</label>
+                    <label><input id="showMass" type="checkbox">Показать массу</label>
                     <br />
-                    <label><input id="continuity" type="checkbox">Continue moving when mouse is off-screen</label>
+                    <label><input id="continuity" type="checkbox">Двигайте шас с помощью тач-скрина</label>
                 </ul>
             </div>
             <div id="instructions">
-                <h3>Gameplay</h3>
+                <h3>Управление</h3>
                 <ul>
-                    <li>Move your mouse on the screen to move your character</li>
-                    <li>Eat food and other players in order to grow your character (food respawns every time a player eats it)</li>
-                    <li>A player's mass is the number of food particles eaten</li>
-                    <li>Objective: Try to get fat and eat other players</li>
+                    <li>Двигайте шас с помощью тач-скрина</li>
+                    <li>Увеличивайте свою массу при помощи Еды</li>
+                    <li>Вы можете быть съедены игроками с большей массой</li>
+
                 </ul>
             </div>
         </div>
