--- a/src/client/index.html
+++ b/src/client/index.html
@@ -36,7 +36,7 @@
             <div id="instructions">
                 <h3>Управление</h3>
                 <ul>
-                    <li>Двигайте шас с помощью тач-скрина</li>
+                    <li>Двигайте шар с помощью тач-скрина</li>
                     <li>Увеличивайте свою массу при помощи Еды</li>
                     <li>Вы можете быть съедены игроками с большей массой</li>
 
