--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>В Беседке Mobile</title>
+    <title>Агар Россия</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/main.css" />
 </head>
@@ -17,7 +17,7 @@
     </div>
     <div id="startMenuWrapper">
         <div id="startMenu">
-            <p>В Беседке Mobile</p>
+            <p>Агар Россия</p>
             <input type="text" tabindex="0" autofocus placeholder="Enter your name here" id="playerNameInput" />
             <b class="input-error">Nick must be alphanumeric characters only!</b>
             <br />
@@ -30,13 +30,13 @@
                     <label><input id="visBord" type="checkbox">Показывать края</label>
                     <label><input id="showMass" type="checkbox">Показать массу</label>
                     <br />
-                    <label><input id="continuity" type="checkbox">Двигайте шас с помощью тач-скрина</label>
+                    <label><input id="continuity" type="checkbox">Непонятно зачем галочка=)</label>
                 </ul>
             </div>
             <div id="instructions">
                 <h3>Управление</h3>
                 <ul>
-                    <li>Двигайте шар с помощью тач-скрина</li>
+                    <li>Двигайте шар с помощью мыши</li>
                     <li>Увеличивайте свою массу при помощи Еды</li>
                     <li>Вы можете быть съедены игроками с большей массой</li>
 
