--- a/src/client/index.html
+++ b/src/client/index.html
@@ -25,7 +25,7 @@
             <button id="settingsButton">Настройки</button>
             <br />
             <div id="settings">
-                <h3>Settings</h3>
+                <h3>Настройки</h3>
                 <ul>
                     <label><input id="visBord" type="checkbox">Показывать края</label>
                     <label><input id="showMass" type="checkbox">Показать массу</label>
