--- a/src/client/index.html
+++ b/src/client/index.html
@@ -18,8 +18,8 @@
     <div id="startMenuWrapper">
         <div id="startMenu">
             <p>Агар Россия</p>
-            <input type="text" tabindex="0" autofocus placeholder="Enter your name here" id="playerNameInput" />
-            <b class="input-error">Nick must be alphanumeric characters only!</b>
+            <input type="text" tabindex="0" autofocus placeholder="Ваш Ник" id="playerNameInput" />
+            <b class="input-error">Ваш ник дольжен быть на Английском!</b>
             <br />
             <button id="startButton">Играть</button>
             <button id="settingsButton">Настройки</button>
