--- a/src/client/index.html
+++ b/src/client/index.html
@@ -19,7 +19,7 @@
         <div id="startMenu">
             <p>Агар Россия</p>
             <input type="text" tabindex="0" autofocus placeholder="Ваш Ник" id="playerNameInput" />
-            <b class="input-error">Ваш ник дольжен быть на Английском!</b>
+            <b class="input-error">Ваш ник должен быть на Английском!</b>
             <br />
             <button id="startButton">Играть</button>
             <button id="settingsButton">Настройки</button>
